Fixed a bug with 2 videos on one page - one video would still overlap the other in full-window mode.

--- a/video-js.css
+++ b/video-js.css
@@ -1,7 +1,7 @@
-.video-js-box { text-align: left; position: relative; z-index: 1000; }
+.video-js-box { text-align: left; position: relative; }
 video.video-js { background-color: #000; }
 
-.video-js-box.vjs-fullscreen { position: fixed; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; }
+.video-js-box.vjs-fullscreen { position: fixed; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; z-index: 1000; }
 .video-js-box.vjs-fullscreen video.video-js { position: absolute; width: 100%; height: 100%; }
 
 .vjs-controls { display: none; position: absolute; margin: 0; padding: 0; border: none; }
